--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,1 +1,15 @@
+FROM node:14-alpine
 
+EXPOSE 3000
+
+WORKDIR /front-end
+
+COPY ./package.json .
+
+RUN npm install
+
+ADD ./node_modules.tar.gz .
+
+COPY . .
+
+ENTRYPOINT ["npm", "start"]
